Added Navigation bar with categories and Category page
