# backend/mnemonics/views/__init__.py
@@ -6,7 +6,7 @@ from rest_framework.response import Response
 from django_filters.rest_framework import DjangoFilterBackend
 from drf_yasg.utils import swagger_auto_schema
 from drf_yasg import openapi
-from mnemonics.filters import MnemonicsFilter
+from mnemonics.filters import MnemonicsFilter, CategoriesFilter
 from mnemonics.models import Category, Expression, Mnemonic, MnemonicType, Tag
 from mnemonics.serializers import (
     CategorySerializer,
@@ -20,6 +20,51 @@ from mnemonics.serializers import (
 class CategoryViewSet(viewsets.ReadOnlyModelViewSet):
     serializer_class = CategorySerializer
     queryset = Category.objects.all()
+    filter_class = CategoriesFilter
+    filter_backends = (DjangoFilterBackend,)
+
+    def get_expressions_from_categories(self, categories):
+        expressions = []
+        for category in categories:
+            category_expressions = category.expressions.all()
+            for expression in category_expressions:
+                if expression not in expressions:
+                    expressions.append(expression)
+
+        return expressions
+
+    def get_child_categories(self, category):
+        children = [category]
+        child_topics = category.child_topics.all()
+        if child_topics and len(child_topics) > 0:
+            for child in child_topics:
+                children += self.get_child_categories(child)
+        return children
+
+    @swagger_auto_schema(responses={200: ExpressionSerializer(many=True)})
+    @action(detail=True)
+    def related_expressions(self, request, pk=None):
+        category = self.get_object()
+        related_topics = list(set(self.get_child_categories(category)))
+        related_expressions = self.get_expressions_from_categories(
+            categories=related_topics
+        )
+        serializer = ExpressionSerializer(related_expressions, many=True)
+        return Response(serializer.data)
+
+    @swagger_auto_schema(
+        manual_parameters=[
+            openapi.Parameter(
+                "ids",
+                openapi.IN_QUERY,
+                description="Categories ids separated by commas",
+                type=openapi.TYPE_ARRAY,
+                items=openapi.Items(type=openapi.TYPE_INTEGER),
+            ),
+        ],
+    )
+    def list(self, request, *args, **kwargs):
+        return super(CategoryViewSet, self).list(request, args, kwargs)
 
 
 class ExpressionViewSet(viewsets.ModelViewSet):
